# ICP_AI_Agent

./: .gitignore  Cargo.toml  README.md  ai_agent_icp_backend.did  dfx.json  icrc1_token.did  package-lock.json  package.json  token.did  tsconfig.json
Langchain_Tools/: package-lock.json  package.json  tsconfig.json
Langchain_Tools/src/: convo.ts  create-token-canister.ts  prompts.json  sendPrompt.ts  server.ts  test-tool.ts  token-canister.ts
Langchain_Tools/src/scheduler/: tasks.ts
Langchain_Tools/src/types/: tool-types.ts
MCP_Server/: README.md  claude_desktop_config.json  package-lock.json  package.json  sample.env  tsconfig.json
MCP_Server/src/: index.ts  token-canister.ts
src/ai_agent_icp_backend/: Cargo.toml  ai_agent_icp_backend.did  task.schema.json  token.did
src/ai_agent_icp_backend/examples/: icrc1_token_example.rs  token_example.rs
src/ai_agent_icp_backend/src/: agent.rs  agent_config.rs  agent_core.rs  lib.rs  token.rs  token2.rs
src/ai_agent_icp_frontend/: index.html  package.json
src/ai_agent_icp_frontend/src/: App.jsx  Routes.tsx  index.css  index.scss  minimal_agent_test.js  simpleCommandParser.js  testDirectTool.js  testEnv.js  vite-env.d.ts
src/ai_agent_icp_frontend/src/components/: TokenPanel.jsx
src/ai_agent_icp_frontend/src/components/hooks/: useAuth.tsx
src/ai_agent_icp_frontend/src/components/ui/: WireMesh.tsx
src/ai_agent_icp_frontend/src/utils/: ai.tsx  hybridCommandExecutor.js  prompts.js  robustAgent.js  sendPrompt.tsx  tools.js
src/token_factory/: Cargo.toml  token_factory.did
src/token_factory/src/: lib.rs
(+27 files in other folders)
