[package]
name = "ai_agent_icp_backend"
version = "0.1.0"
edition = "2021"

[lib]  
crate-type = ["cdylib"]   

[dependencies]
candid = { version = "0.10", features = ["value"] } 
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
ic-cdk-timers = "0.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
chrono = {version = "0.4.41",features = ["serde"]}
uuid = { version = "1.8", features = ["v4", "js"] }
getrandom = { version = "0.2", features = ["js"] } 
